<resources>
    <string name="app_name">MAYANA</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="close">close</string>
    <string name="hello_first_fragment">HELLO TEST 123</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- String used for CountdownTimer activity -->
    <string name="countdown_display">00:00</string>
    <string name="work_countdown_label">Work Duration</string>
    <string name="break_countdown_label">Break Duration</string>
    <string name="timer_button_label">Start Working</string>
    <string name="set_button_label">Set</string>
    <string name="reset_button_label">Reset</string>
    <string name="input_time_hint_label">Minutes</string>
    <string name="start_pause_break_button_label">Start Break</string>
    <string name="create_new_habit">Create New Habit</string>
    <string name="end_time">End Time</string>
    <string name="choose_time_in_a_day">Choose Time in a Day</string>
    <string name="start_time">Start Time</string>
    <string name="task_title">Task Title</string>
    <string name="_1_30">1:30</string>
    <string name="choose_repetitions">Choose repetitions</string>
    <string name="_2_30">2:30</string>
    <string name="choose_an_activity">Choose an Activity</string>
    <string name="create_habit">Create Habit</string>
    <string name="_1">1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_notes">Notes</string>
    <string name="textview">TextView</string>
    <string name="title_activity_fragment_calendar">Calendar</string>
    <string name="title_activity_add_note" />
    <string name="title_activity_note_details" />
    <string name="title_activity_main2">MainActivity2</string>
</resources>