<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFDFD"
    tools:context=".CountdownTimer">

    <EditText
        android:id="@+id/edit_text_input"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="303dp"
        android:layout_toEndOf="@+id/textView_work_label"
        android:hint="@string/input_time_hint_label"
        android:inputType="number"
        android:maxLength="4"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edit_text_break"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="256dp"
        android:layout_toEndOf="@+id/textView_break_label"
        android:hint="@string/input_time_hint_label"
        android:inputType="number"
        android:maxLength="4"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView_work_label"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="138dp"
        android:layout_marginBottom="105dp"
        android:text="@string/countdown_display"
        android:textColor="@android:color/black"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/textView_work_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView_break_label"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="71dp"
        android:layout_marginBottom="24dp"
        android:text="@string/work_countdown_label"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_break_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_start_pause"
        android:layout_alignParentStart="true"
        android:layout_marginStart="71dp"
        android:layout_marginBottom="29dp"
        android:text="@string/break_countdown_label"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_start_pause"
        android:layout_width="258dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="83dp"
        android:layout_marginBottom="167dp"
        android:background="#2E3A59"
        android:text="@string/timer_button_label" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="262dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="79dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="32dp"
        android:text="@string/reset_button_label"
        android:visibility="invisible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_start_pause_break"
        android:layout_width="262dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="97dp"
        android:text="@string/start_pause_break_button_label"
        android:visibility="invisible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_set"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="298dp"
        android:text="@string/set_button_label"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button_set_break"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="250dp"
        android:text="@string/set_button_label"
        android:textSize="12sp" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="303dp"
        android:layout_height="320dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="23dp"
        android:background="#00000000"
        android:foregroundTint="#FDF6F6" />

</RelativeLayout>